2004-06-04 Florian Boor <florian.boor@kernelconceps.de>
	* interface.c: some simplification.
	* interface.c: Added default rule.
	* backend.c: Added connection states support.
	* interface.c, backend.c: Implemented shutdown.
	* New file: TODO

2004-06-02 Florian Boor <florian.boor@kernelconceps.de>
	* interface.c: Fixed icon declaration bug.
	* editrule.c: Added much stuff.
	* interface.c: Implemented several checks, removing, active change...
	* backend.c: Simplified stuff, implemented applying and several other commands.

2004-06-01 Florian Boor <florian.boor@kernelconceps.de>
	* Introduced this file
	* backend.c: Make backend honor active flag.
	* editrule*: Added rule editor.
	* interface.c: New button: Edit rule.